# ColorPicker

./: CMakeLists.txt  Privacy_Policy.txt  main.cpp  main.qml  qmlclipboardadapter.cpp  qmlclipboardadapter.h  utilitarios.cpp  utilitarios.h
